--- a/README.adoc
+++ b/README.adoc
@@ -352,8 +352,8 @@ Run `mvn package` and refresh {openapi-url} to see the updated OpenAPI tree:
 A few tests are included for you to test the basic functionality of the `inventory` service, but not
 including the generated OpenAPI tree. If a test failure occurs, then you might have introduced a bug
 into the code. These tests will run automatically as a part of the Maven build process when you run
-`mvn install`. You can also run these tests separately from the build using the `mvn verify` command,
-but first make sure that the server is stopped.
+the `mvn install` command. You can also run these tests separately from the build using the `mvn verify`
+command, but first make sure that the server is stopped.
 
 No explicit tests exist to verify the correctness of the generated OpenAPI tree. This can be verified
 manually by visiting {openapi-url} or {openapi-url}/ui.
@@ -368,7 +368,7 @@ manually by visiting {openapi-url} or {openapi-url}/ui.
 You have just exposed and filtered the APIs of the `inventory` service from both code and a static file
 using MicroProfile OpenAPI.
 
-Feel free to try one of the related MicroProfile guides. They demonstrate new technologies that you
+Feel free to try one of the related MicroProfile guides. They demonstrate additional technologies that you
 can learn and expand on top what you built here.
 
 For more in-depth examples of MicroProfile OpenAPI, try one of the demo applications found on the official
